add api : getJobParam.getMySummary.
